[package]
name = "raventhemer"
version = "1.5.0"
authors = ["nicohman <nicohman@demenses.net>"]
repository="https://git.sr.ht/~nicohman/raven"
description="A theme manager and switcher for desktop linux"
readme="README.md"
keywords=["linux","cli","customization"]
categories=["gui","command-line-interface"]
license="GPL-3.0"
[[bin]]
name = "raven"
path = "src/main.rs"
[[bin]]
name = "ravend"
path = "src/ravend.rs"
[lib]
name = "ravenlib"
path = "src/ravenlib.rs"
[dependencies]
time = "0.1"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
reqwest = "0.9.2"
multipart = "0.15.2"
structopt = "0.2.10"
dirs = "1.0"
